--- a/DGGH.Formacion.VBNet/DGGH.Formacion.VBNet.vbproj
+++ b/DGGH.Formacion.VBNet/DGGH.Formacion.VBNet.vbproj
@@ -67,8 +67,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Delegados.vb" />
-    <Compile Include="Colecciones.vb" />
+    <Compile Include="3. Delegados.vb" />
+    <Compile Include="2. Colecciones.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -84,7 +84,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Tipos.vb" />
+    <Compile Include="1.Tipos.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
